style.css
/* below is for all elements in the index.html*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: sans-serif;
}
/* The h headers are styled below, h1 is the title font so I increased its size
the weight is the actual size of the characters theirselves*/
h1 {
  color: #6F4C5B;
  font-weight: 600;
  font-size: 3rem;
}
h2 {
  color: #9E7777;
  font-weight: 600;
}

h3 {
  color: #6F4C5B;
  font-weight: 600;
}
footer{
    background: #6F4C5B;
    color: #F5E8C7;
    text-align: center;
}
/* Clouds used for the background, found on pexels by eberhard grossgasteiger
@https://www.pexels.com/@eberhardgross
*/
body{
    background-image: url(./images/clouds.jpg);
}
/* This is the box container that wraps my content
it is rounded and the content is centered*/
.wrap{
  border-color: #6F4C5B;
  border-style: double;
  border-radius: 20px;
  width: fit-content;
  margin: auto;
  overflow: hidden;
  text-align: center;
}
/*below is my headshot and the color for the non picture part */
.picture{
    background: #F5E8C7;
}
/* This is a board class I used to style the text blocks
color relates to the text and background-color is the backgroun*/
.article{
    color: #6F4C5B;
    font-weight: 250;
    background-color: #DEBA9D;
    text-align: center;
    padding: 5px 5px 5px 5px;
}
/* Below are the two lists, I added a board to the both of them
to set them apart as I was not sure how to blend the colors together and make
it look great*/
.unordered{
    border-color: #6F4C5B;
    border-style: double;
    border-radius: 15px;
    list-style-type: circle;
    background: #F5E8C7;
    padding: 20px;
    display: inline-block;
}
.ordered{
    border-color: #6F4C5B;
    border-style: double;
    border-radius: 15px;
    background: #F5E8C7;
    padding: 20px;
    text-align: center;
    display: inline-block;
}
/*Below are my stylized links, the added text-decoration attriubte makes the underline
appear when hovered,active, and visited */
a{
    text-decoration: none;
}
a:visited{
    color: #3c2931;
    text-decoration: underline;
}
a:hover{
    color: #b18d9c;
    text-decoration: underline;
}
a:active{
    color: #dbcad1;
    text-decoration: underline;
}

